# fp-homework

./: README.md  stack.yaml
hw0/: README.md  hw0.cabal
hw0/src/: Part1.hs  Part2.hs  Part3.hs  Part4.hs  Part5.hs  Part6.hs  Part7.hs
hw1/: README.md  hw1.cabal
hw1/src/: Part1.hs  Part2.hs  Part3.hs  Part4.hs  Part5.hs
hw2/: README.md  hw2.cabal
hw3/: README.md  hw3.cabal
hw4/: README.md  hw4.cabal
